--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 
 html {
   color: rgba(0,0,0,0.8);
-  font: 18px/1.25 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font: 17px/1.25 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   text-rendering: optimizeLegibility;
   word-wrap: break-word;
   overflow-wrap: break-word;
@@ -92,7 +92,7 @@ select,
 textarea {
   font-size: 1.25em;
   line-height: 1.25;
-  padding: 0.32768em;
+  padding: 0.512em;
 }
 
 optgroup,
@@ -122,7 +122,7 @@ select::-ms-expand {
 select {
   -moz-appearance: none; /* 1 */
   -webkit-appearance: none; /* 2 */
-  height: 1.987503em; /* 3 */
+  height: 2.341176em; /* 3 */
   color: inherit;
   background-color: #fff;
   background-image: url('data:image/svg+xml;utf8,<svg height="24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z" fill="rgba(0,0,0,0.8)"/></svg>');
@@ -195,7 +195,7 @@ body {
 .header h1,
 .inside .header {
   margin: 0;
-  padding: 0.8em 0.8rem;
+  padding: 1em 1rem;
   font-size: 1.25em;
   font-weight: 200;
   letter-spacing: 0.2em;
@@ -207,7 +207,7 @@ body {
 .inside .header a[href] {
   color: #fff;
   text-align: center;
-  padding: 0.4096em 0;
+  padding: 0.512em 0;
 }
 
 .header h1 a[href]:hover,
@@ -220,7 +220,7 @@ body {
 
 #breadcrumb {
   margin: 0;
-  padding: 1em 0.8rem;
+  padding: 1.25em 1rem;
   list-style: none;
   text-align: center;
   background-color: #fff; /* Google Map default background */
@@ -239,19 +239,19 @@ body {
 
 #breadcrumb li a[href] {
   font-weight: bold;
-  padding: 0.64em 0;
+  padding: 0.8em 0;
 }
 
 /* ========== #map ========== */
 
 #map {
-  height: calc(100vh - 64px);
+  height: calc(100vh - 4.029412rem);
   width: 100%;
   background-color: #e5e3df; /* Google Map default background */
 }
 
 .inside #map {
-  height: calc(100vh - 122px);
+  height: calc(100vh - 7.764706rem);
   box-shadow: 0.125em 0.32768em 0.4096em rgba(55,71,79,.2);
 }
 
@@ -259,16 +259,14 @@ body {
 
 .filter-options {
   text-align: center;
-  padding: 1em 0.8rem;
+  padding: 1.25em 1rem;
   background-color: #263238; /* GMD Blue Grey 900 */
   box-shadow: 0.125em 0.32768em 0.4096em rgba(55,71,79,.2);
 }
 
 #filter-legend {
   color: #fff;
-  font-size: 1.25em;
-  font-weight: bold;
-  margin: 0 0 1em;
+  margin: 0 0 0.8em;
 }
 
 .filter-options select {
@@ -282,7 +280,7 @@ body {
 /* ========== .results ========== */
 
 .results {
-  padding: 0 0.4rem;
+  padding: 0 0.5rem;
 }
 
 #restaurants-list {
@@ -292,7 +290,7 @@ body {
 
 #restaurants-list li {
   margin: 2.441406em 0;
-  padding: 0 0.4em;
+  padding: 0 0.5rem;
 }
 
 #restaurants-list article {
@@ -308,7 +306,7 @@ body {
 }
 
 #restaurants-list article> :not(img) {
-  padding: 0 0.8rem;
+  padding: 0 1rem;
 }
 
 #restaurants-list article strong {
