--- a/css/styles.css
+++ b/css/styles.css
@@ -310,30 +310,36 @@ body {
 
 /* ========== .header ========== */
 
-.header {
+body> header,
+[role="banner"] {
+  color: #bdbdbd; /* GMD Grey 400 */
+  text-align: center;
   background-color: #263238; /* GMD Blue Grey 900 */
 }
 
-.header h1,
-.inside .header h2 {
+body> header h1 {
   margin: 0;
+}
+
+[role="banner"] strong {
+  display: inline-block;
+}
+
+body> header h1,
+[role="banner"] strong {
   padding: 1em 1rem;
   font-size: 1.25em;
   font-weight: normal;
   letter-spacing: 0.2em;
-  text-align: center;
   text-transform: uppercase;
 }
 
-.header h1 a[href],
-.inside .header h2 a[href] {
+[role="banner"] a[href] {
   color: #fff;
-  text-align: center;
   padding: 0.512em 0;
 }
 
-.header h1 a[href]:hover,
-.inside .header h2 a[href]:hover {
+[role="banner"] a[href]:hover {
   color: #448aff; /* GMD Blue A200 */
   text-decoration: none;
 }
